--- a/README
+++ b/README
@@ -1,4 +1,9 @@
-CSV_to_XML.py input output
+CSV_to_XML.py input.csv output.xml
+
+CSV guidelines
+First row must contain the root and child element names
+The second row must contain the field names and must correspond the same number of fields in the csv data
+The third and subsequent rows contain the csv data
 
 This file was created by PyCharm 2.7.3 for binding GitHub repository
 
